# AIResume

./: .gitignore  start.sh
back/: pyproject.toml
back/app/: config.py  database.py  main.py
back/app/agents/: __init__.py  extraction.py  graph.py  template_generator.py
back/app/api/: __init__.py  auth.py  chat.py  export.py  llm_config.py  resume.py  template.py  upload.py
back/app/models/: __init__.py  models.py
back/app/schemas/: __init__.py  schemas.py
back/app/services/: __init__.py  llm.py  parser.py
docs/: 任务列表.md  用户故事.md
front/: package-lock.json  package.json
front/src/: App.tsx  index.css
front/src/api/: client.ts
front/src/components/: ASTRenderer.tsx  ChatPanel.tsx  ResumePreview.tsx  VersionHistory.tsx
front/src/pages/: Editor.tsx  Home.tsx  Login.tsx  Settings.tsx  TemplateDesigner.tsx
front/src/store/: index.ts
front/src/types/: index.ts
