[project]
name = "ai-resume-backend"
version = "0.1.0"
description = "AI Resume Generator Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "tortoise-orm>=0.22.0",
    "aiosqlite>=0.20.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "weasyprint>=62.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
